tests/fixtures/functional_patterns/positive/p41_string_chars.rs
fn process_chars(s: &str) -> String {
    s.chars()
        .filter(|c| c.is_alphanumeric())
        .collect()
}
