tests/fixtures/functional_patterns/negative/n32_string_len.rs
fn string_length(s: &str) -> usize {
    s.len()
}
